test/Fail/Issue1913.err
Issue1913.agda:17.5-6: error: [InstanceNoCandidate]
No instance of type M.D was found in scope.
when checking that the expression ! has type M.D
